fix overflow x on mobile

--- a/assets/scss/components/homeHeader.scss
+++ b/assets/scss/components/homeHeader.scss
@@ -118,6 +118,10 @@
       writing-mode: vertical-rl;
       text-orientation: mixed;
 
+      @include max(md) {
+        display: none;
+      }
+
       .line {
         height: 4.0625vw;
         background: black;
